--- a/demo/AlertDemo.scss
+++ b/demo/AlertDemo.scss
@@ -3,3 +3,6 @@
 @import "../node_modules/bee-panel/src/Panel.scss";
 @import "../node_modules/bee-layout/src/Layout.scss";
 @import "../node_modules/bee-button/src/Button.scss";
+.u-alert {
+	margin-bottom: 20px;
+}
